<resources>
    <string name="app_name">WorkGram</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login">Log in</string>
    <string name="login_to_account">Login to your account</string>
    <string name="login_hint">Enter your email</string>
    <string name="password_hint">Enter Password</string>
    <string name="login_button">Log in</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="employee">Employee</string>
    <string name="employer">Employer</string>
    <string name="chat">\u0020\u0020\u0020\u0020\u0020\u0020Chat\u0020\u0020\u0020\u0020\u0020\u0020</string>
    <string name="mainTitle">Home</string>
    <string name="map">Map</string>
    <string name="my_skills">My skills</string>
    <string name="my_ratings">My ratings</string>
    <string name="my_offers">My offers</string>
    <string name="offers">Offers</string>
    <string name="find_workers">Find workers</string>
    <string name="create_project">Create project</string>
    <string name="choose_category">Choose category</string>
    <string name="search">Search</string>
    <string name="update">Update</string>
    <string name="send_request">Send request</string>
    <string name="welcome">Welcome to Workgram!!!</string>
    <string name="welcome_name">Welcome %1$s !!!</string>
    <string name="project_status">Status: %1$s</string>
    <string name="start_time">Start time: %1$s</string>
    <string name="finish_time">Finish time: %1$s</string>
    <string name="price">%1$s tg</string>
    <string name="fullName">%1$s %2$s (%3$s)</string>
    <string name="category">%1$s</string>
<!--   Errors-->
    <string name="generic_error">Try again later</string>
    <string name="INVALID_FIELD">Invalid field</string>
    <string name="UNAUTHORIZED">Unauthorized</string>
    <string name="AUTH_ERROR">Authorization error</string>
    <string name="ACCESS_DENIED">ACCESS_DENIED</string>
    <string name="UNIQUE_RESOURCE_CONFLICT">UNIQUE_RESOURCE_CONFLICT</string>
    <string name="INVALID_ARGUMENT">INVALID_ARGUMENT</string>
    <string name="INVALID_TOKEN">INVALID_TOKEN</string>
    <string name="EXPIRED_TOKEN">EXPIRED_TOKEN</string>
    <string name="REQUIRED_PARAMS_NOT_FOUND">REQUIRED_PARAMS_NOT_FOUND</string>
    <string name="FIELD_REQUIRED">FIELD_REQUIRED</string>
    <string name="INCORRECT_PASSWORD">Incorrect password</string>
    <string name="NOT_REGISTERED">Not registered</string>

    <string name="unauthorized_message">Your session time is expire, please re-login!</string>
    <string name="ok">OK!</string>

    <string name="enter_title">Enter title</string>
    <string name="enter_price">Enter price</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_start_time">Enter start time</string>
    <string name="enter_finish_time">Enter finish time</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_nick">Enter nickname</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="select_photo">Select photo</string>
    <string name="logout">Sign out</string>




    <string name="alert_title">Message</string>
    <string name="success">Successfully updated</string>
    <string name="success_create">Successfully created</string>
    <string name="no_offers_implemented">You does not have any offers yet</string>
    <string name="no_offers_created">You are not created any offers</string>
    <string name="no_workers">No workers in this category</string>
    <string name="no_offers">No offers</string>

<!--    Activities-->
    <string name="title_activity_base">BaseActivity</string>



    <string name="login_to_account_desc">Type login and password</string>
    <string name="pass_length_error">Password length no less than 8 characters</string>
    <string name="set">Set</string>
</resources>
