<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.home.HomeActivity">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kz.diploma.workgram.views.home.HomeViewModel" />
        <variable
            name="delegate"
            type="kz.diploma.workgram.views.home.HomeNextViewDelegate" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/main">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/top"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <TextView
                style="@style/PageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title_home" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="65dp"
            android:layout_centerHorizontal="true">
        <TextView
            style="@style/topicTitle"
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:helloName="@{viewModel.userName}"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:orientation="horizontal">
                <LinearLayout
                android:id="@+id/leftLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/settingsCard"
                        style="@style/CardViewMainCenterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{delegate::onNextButtonClicked}">
                        <ImageView
                            style="@style/CardViewImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_build_white_24dp"/>
                        <TextView
                            android:id="@+id/settingText"
                            style="@style/CardViewMainCenterButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/settings" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/centerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/employeeCard"
                    style="@style/CardViewMainCenterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{delegate::onNextButtonClicked}">
                    <ImageView
                        style="@style/CardViewImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_attach_money_white_24dp"/>
                        <TextView
                            style="@style/CardViewMainCenterButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/employee" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/accountCard"
                        style="@style/CardViewMainCenterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{delegate::onNextButtonClicked}">
                        <ImageView
                            style="@style/CardViewImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_person_white_24dp"/>
                        <TextView
                            style="@style/CardViewMainCenterButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:text="@string/account" />
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:id="@+id/employerCard"
                        style="@style/CardViewMainCenterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{delegate::onNextButtonClicked}">
                        <ImageView
                            style="@style/CardViewImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_work_white_24dp"/>
                        <TextView
                            style="@style/CardViewMainCenterButtonText"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/employer" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/chatCard"
                        style="@style/CardViewMainCenterButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{delegate::onNextButtonClicked}">
                        <ImageView
                            style="@style/CardViewImage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_comment_white_24dp"/>
                        <TextView
                            style="@style/CardViewMainCenterButtonText"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:text="@string/chat" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            style="@style/CardViewPostButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="@{delegate::onNextButtonClicked}">

            <TextView
                style="@style/CardViewPostButtonText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/map" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</layout>