<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kz.diploma.workgram.views.offers.createOffer.CreateOfferViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/snow"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/side_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title"
            style="@style/infoCreateProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColorHint="@color/snow" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/side_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            style="@style/infoCreateProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine"
            android:textAlignment="textStart"
            android:lines="4"
            android:maxLines="6"
            android:minLines="2"
            android:scrollbars="vertical"
            android:textColorHint="@color/gray" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/side_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                style="@style/infoCreateProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price"
                android:inputType="number"
                android:textAlignment="textStart"
                android:scrollbars="vertical"
                android:textColorHint="@color/snow" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStartTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/snow"
            android:layout_marginStart="@dimen/side_margin"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/side_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/startTimePicker"
                style="@style/infoCreateProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_start_time"
                android:inputType="date"
                android:textAlignment="textStart"
                android:scrollbars="vertical"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textColorHint="@color/snow" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>