<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="kz.diploma.workgram.views.employee.EmployeeViewModel" />
        <variable
            name="delegate"
            type="kz.diploma.workgram.views.BaseNextViewDelegate" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:background="@color/main"
        tools:context=".views.employee.EmployeeFragment">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivIcon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_logo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/mySkillsCard"
                    style="@style/CardViewMainHorizontalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{delegate::onNextButtonClicked}">

                    <TextView
                        style="@style/CardViewPostButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/my_skills" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/myRatingsCard"
                    style="@style/CardViewMainHorizontalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{delegate::onNextButtonClicked}">

                    <TextView
                        style="@style/CardViewPostButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/my_ratings" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/offersCard"
                    style="@style/CardViewMainHorizontalButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="@{delegate::onNextButtonClicked}">

                    <TextView
                        style="@style/CardViewPostButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/offers" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            style="@style/CardViewBottomPaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
        <View
            android:layout_width="0dp"
            android:layout_height="225dp"
            android:background="@color/top"
            />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    </ScrollView>
</layout>