<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.auth.RegisterActivity">
    <data>
    <import type="android.view.View" />

    <variable
        name="viewModel"
        type="kz.diploma.workgram.views.auth.AuthViewModel" />
    <variable
        name="delegate"
        type="kz.diploma.workgram.views.auth.NextViewDelegate" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/top"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    style="@style/PageTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo"/>
                <TextView
                    style="@style/LoginTitle"
                    android:id="@+id/loginTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_to_account" />
                <TextView
                    android:id="@+id/tvDesc"
                    style="@style/InfoDarkBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:loginStatus="@{viewModel.fieldChecked}"
                    android:textColor="@color/darkBlue" />
                <androidx.cardview.widget.CardView
                    style="@style/CardViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/viewEnterEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="4dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp">
                            <EditText
                                android:id="@+id/email"
                                style="@style/LoginFill"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:background="@null"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@={viewModel.email}"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.8dp"
                            android:background="@color/gray" />
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/viewEnterPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingStart="4dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingBottom="10dp">

                            <EditText
                                android:id="@+id/password"
                                style="@style/PasswordFill"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:background="@null"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                android:text="@={viewModel.password}"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNextBtn"
                    style="@style/CardViewPostButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:onClick="@{delegate::onNextButtonClicked}">

                    <TextView
                        style="@style/CardViewPostButtonText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_button" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:setVisibility="@{viewModel.loadingStatus}" />
        </RelativeLayout>
    </ScrollView>
</layout>